[project]
name = "visualisation-exploratoire"
version = "0.1.0"
description = "Cette librairie a pour but de préparer des visualisations toutes faites afin de gagner du temps lors des analyses exploratoires"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=3.3.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "skimpy>=0.0.19",
]
